[package]
name = "sm"
version = "2.0.0"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
clap = "2.33"
structopt = "0.3.2"

[dependencies]
clap = "2.33"
structopt = "0.3.2"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
serde = "1.0.101"
serde_yaml = "0.8.11"
serde_json = "1.0.41"
serde-value = "0.6.0"
serde_derive = "1.0.101"
